<resources>
    <string name="app_name">REMINDER NOTES</string>
    <string name="ingresoNombre">Nombre</string>
    <string name="ingresoApellido">Apellido</string>
    <string name="ingresoEmail">Email</string>
    <string name="ingresoUsuario">Usuario</string>
    <string name="ingresoContraseña">Contraseña</string>
    <string name="btnRegistrarse">Registrarse</string>
    <string name="btnLogin">Login</string>
    <string name="btnMostrar">Mostrar</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_calendario">Calendario</string>
    <string name="menu_agenda">Agenda</string>
    <string name="menu_cerrarsesion">Cerrar sesion</string>
    <string name="btnMenu"></string>
    <string name="btnUsuario"></string>
    <string name="hintTituloRecord">Título</string>
    <string name="txtTipo">tipo de recordatorio:</string>
    <string name="btnRecordatorio">Recordatorio</string>
    <string name="btnProgramado">Programado</string>
    <string name="btnSimple">Simple</string>
    <string name="btnListo">Listo</string>
    <string name="title_activity_xd">xd</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu_drawer_open">Drawen Open</string>
    <string name="menu_drawer_close">Drawen Close</string>
    <string name="txtTituloRecordatorio">Titulo</string>
    <string name="txtDescripcionRecordatorio">Descripcion</string>
    <string name="btnEliminar">Eliminar</string>
</resources>