<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/backgroundRN"
    android:id="@+id/mainHome"
    >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_user" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/ingreso_txt_rosa"
        android:ems="10"
        android:hint="@string/ingresoUsuario"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="#8FFFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/ingreso_txt_azul"
        android:ems="10"
        android:hint="@string/ingresoContraseña"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="#8FFFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/btn_ingreso"
        android:onClick="Login"
        android:text="@string/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName7" />

</androidx.constraintlayout.widget.ConstraintLayout>