<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbarThumbHorizontal="@color/material_on_background_disabled"
    android:scrollbarThumbVertical="@color/material_on_background_disabled"
    tools:context=".AddRecord">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="411dp"
        android:layout_height="53dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/btnAtras"
            android:layout_width="66dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:background="@null"
            app:srcCompat="@drawable/flecha"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="48dp" />

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="216dp"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:gravity="center_horizontal"
            android:text="Reminder Notes"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="126dp"
            tools:layout_editor_absoluteY="59dp" />

        <ImageButton
            android:id="@+id/btnUsuario"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/img_3" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtTipo"
        android:textSize="30dp"
        android:textColor="#B3FFFFFF"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10mm">

        <Button
            android:id="@+id/btn_recordatorio"
            android:layout_width="218dp"
            android:layout_height="65dp"
            android:background="@drawable/btn_tipo_recordatorio"
            android:text="@string/btnRecordatorio"
            android:textColor="@color/black"
            android:textSize="14dp"/>


        <Button
            android:id="@+id/btn_programado"
            android:layout_width="218dp"
            android:layout_height="65dp"
            android:layout_marginTop="1mm"
            android:background="@drawable/btn_tipo_programado"
            android:text="@string/btnProgramado"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btn_simple"
            android:layout_width="218dp"
            android:layout_height="65dp"
            android:background="@drawable/btn_tipo_simple"
            android:text="@string/btnSimple"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:layout_marginTop="1mm"/>


    </LinearLayout>
</LinearLayout>