<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbarThumbHorizontal="@color/material_on_background_disabled"
    android:scrollbarThumbVertical="@color/material_on_background_disabled"
    tools:context=".AddRecord">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="411dp"
        android:layout_height="53dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/btnAtras"
            android:layout_width="66dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:background="@null"
            app:srcCompat="@drawable/flecha"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="48dp" />

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="216dp"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:gravity="center_horizontal"
            android:text="Reminder Notes"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="126dp"
            tools:layout_editor_absoluteY="59dp" />


    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="3mm"
        android:text="@string/txtTipo"
        android:textColor="#B3FFFFFF"
        android:textSize="30dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Simple"
            android:gravity="center"
            android:textSize="40dp"
            ></TextView>

    <EditText
        android:id="@+id/txtTituloSimple"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:baselineAligned="false"
        android:ems="10"
        android:hint="@string/hintTituloRecord"
        android:textColor="#B3FFFFFF"
        android:textColorHint="#B3FFFFFF"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtDescripcionSimple"
        android:layout_width="352dp"
        android:layout_height="120dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:hint="Descripcion..." />




    <Button
        android:id="@+id/btnListoSimple"
        android:layout_width="110dp"
        android:layout_height="43dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_mostrar"
        android:text="@string/btnListo"
        android:textAlignment="center"
        android:textColor="@color/black" />

</LinearLayout>