<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:scrollbarThumbHorizontal="@color/material_on_background_disabled"
    android:scrollbarThumbVertical="@color/material_on_background_disabled"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="411dp"
        android:layout_height="53dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/btnMenu"
            style="@android:style/Widget.Holo.ImageButton"
            android:layout_width="58dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            app:srcCompat="@mipmap/img"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="48dp" />

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:gravity="center_horizontal"
            android:text="Reminder Notes"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="126dp"
            tools:layout_editor_absoluteY="59dp" />

        <ImageButton
            android:id="@+id/btnUsuario"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/img_3" />
    </LinearLayout>

    <EditText
        android:id="@+id/txtTituloRecord"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:baselineAligned="false"
        android:ems="10"
        android:hint="@string/hintTituloRecord"
        android:text="Título"
        android:textColor="#B3FFFFFF"
        android:textColorHint="#B3FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:text="Descripción..."
        android:textColor="#B3FFFFFF"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txtDescripcion"
        android:layout_width="352dp"
        android:layout_height="120dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:ems="0"
            android:text="@string/txtTipo"
            android:textColor="#B3FFFFFF"
            android:textSize="14dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="3dp"
            android:text="@string/btnRecordatorio"
            android:textColor="@color/black"
            android:textSize="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="43dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="25dp">

        <Button
            android:id="@+id/btnFecha"
            android:layout_width="128dp"
            android:layout_height="37dp"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="25dp"
            android:textColor="@color/black"
            android:textSize="14dp"
            tools:text="DD/MM/YY" />

        <Button
            android:id="@+id/btnHora"
            android:layout_width="128dp"
            android:layout_height="37dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="50dp"
            android:textColor="@color/black"
            app:iconPadding="10dp"
            tools:text="HH:MM" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="43dp">
    <Button
        android:id="@+id/btnListo"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="110dp"
        android:layout_height="43dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="40dp"
        android:background="#F6C841"
        android:text="@string/btnListo"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorLink="#F6C841" />
    </LinearLayout>

</LinearLayout>