<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:scrollbarThumbHorizontal="@color/material_on_background_disabled"
    android:scrollbarThumbVertical="@color/material_on_background_disabled"
    tools:context=".AddRecord2">
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="411dp"
        android:layout_height="53dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">
        <ImageButton
            android:id="@+id/btnAtras"
            android:layout_width="66dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            app:srcCompat="@drawable/flecha"
            android:background="@null"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="48dp"/>

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="224dp"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:gravity="center_horizontal"
            android:text="Reminder Notes"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="126dp"
            tools:layout_editor_absoluteY="59dp" />
        <ImageButton
            android:id="@+id/btnUsuario"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/img_3" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:ems="0"
            android:text="@string/txtTipo"
            android:textColor="#B3FFFFFF"
            android:textSize="14dp" />

        <Button
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:background="@drawable/btn_tipo_programado"
            android:text="@string/btnProgramado"
            android:textColor="@color/black"
            android:textSize="14dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="128dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:text="Fecha de Inicio"
                android:textSize="14dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnFechaInicio"
                    android:layout_width="128dp"
                    android:layout_height="37dp"
                    android:layout_marginLeft="38dp"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    tools:text="DD/MM/YY" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="68dp"
                    android:layout_marginTop="10dp"
                    android:text="Hora"
                    android:textSize="14dp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="10dp"
                android:text="Fecha de termino"
                android:textSize="14dp" />
            <Button
                android:id="@+id/btnHora"
                android:layout_width="128dp"
                android:layout_height="37dp"
                android:layout_marginLeft="30dp"
                android:textColor="@color/black"
                app:iconPadding="10dp"
                tools:text="HH:MM" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnFechaFinal"
                android:layout_width="128dp"
                android:layout_height="37dp"
                android:layout_marginLeft="38dp"
                android:layout_marginRight="25dp"
                android:textColor="@color/black"
                android:textSize="14dp"
                tools:text="DD/MM/YY" />
        </LinearLayout>
    </LinearLayout>
    <EditText
        android:id="@+id/txtTituloProgramado"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:baselineAligned="false"
        android:ems="10"
        android:hint="@string/hintTituloRecord"
        android:textColor="#B3FFFFFF"
        android:textColorHint="#B3FFFFFF"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtDescripcionProgramado"
        android:layout_width="352dp"
        android:layout_height="120dp"
        android:hint="Descripcion..."
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="40dp">
        <Button
            android:id="@+id/btnListo"
            android:layout_width="110dp"
            android:layout_height="43dp"
            android:layout_marginLeft="150dp"
            android:background="@drawable/btn_mostrar"
            android:text="@string/btnListo"
            android:textAlignment="center"
            android:textColor="@color/black" />
    </LinearLayout>
</LinearLayout>